refactoring of dioptas server service into small services

--- a/src/app/widgets/integration/integration-control/image-control/image-control.component.html
+++ b/src/app/widgets/integration/integration-control/image-control/image-control.component.html
@@ -10,12 +10,12 @@
 
       <button
         mat-raised-button class="arrow" style="margin-right:5px;"
-        (click)="dioptasService.load_previous_image()"
+        (click)="imageService.load_previous_image()"
       >&lt;
       </button>
       <button
         mat-raised-button class="arrow"
-        (click)="dioptasService.load_next_image()"
+        (click)="imageService.load_next_image()"
       >&gt;
       </button>
       <mat-form-field style="width: 35px;">
