added starting size parameters for the splitters

--- a/src/app/widgets/utility/splitter/horizontal-splitter/horizontal-splitter.component.css
+++ b/src/app/widgets/utility/splitter/horizontal-splitter/horizontal-splitter.component.css
@@ -6,13 +6,8 @@
 }
 
 .block {
-  height: 50%;
+  /*height: 50%;*/
   overflow:auto;
-}
-
-.top {
-  overflow: auto;
-  height: 50%;
 }
 
 .bottom {
