--- a/src/app/views/integration/integration.component.html
+++ b/src/app/views/integration/integration.component.html
@@ -1,10 +1,10 @@
 <div class="integrationContainer" #integrationContainer>
-  <app-vertical-splitter style="height: 100%;">
+  <app-vertical-splitter [leftSize]="'40%'" style="height: 100%;">
     <ng-template #left>
       <app-image-plot></app-image-plot>
     </ng-template>
     <ng-template #right>
-      <app-horizontal-splitter>
+      <app-horizontal-splitter [topSize]="'35%'">
         <ng-template #top>
           <app-integration-control></app-integration-control>
         </ng-template>
