--- a/src/app/widgets/utility/splitter/horizontal-splitter/horizontal-splitter.component.html
+++ b/src/app/widgets/utility/splitter/horizontal-splitter/horizontal-splitter.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="block top" #topBlock>
-    <ng-container [ngTemplateOutlet]="top" ></ng-container>
+  <div class="block top" [style.height]="topSize" #topBlock>
+    <ng-container [ngTemplateOutlet]="top"></ng-container>
   </div>
   <div class="slider" #slider draggable="false"></div>
   <div class="block bottom">
