--- a/src/app/widgets/utility/splitter/vertical-splitter/vertical-splitter.component.html
+++ b/src/app/widgets/utility/splitter/vertical-splitter/vertical-splitter.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="block left" #leftBlock>
+  <div class="block left" [style.width]="leftSize" #leftBlock>
     <ng-container [ngTemplateOutlet]="left" ></ng-container>
   </div>
   <div class="slider" #slider draggable="false"></div>
