Rudimentary implementation of overlays loaded from backend

--- a/src/app/widgets/integration/integration-control/overlay-control/overlay-control.component.html
+++ b/src/app/widgets/integration/integration-control/overlay-control/overlay-control.component.html
@@ -17,6 +17,7 @@
       <button mat-raised-button class="reset"
               matTooltip="Remove all overlays"
               matTooltipShowDelay="1000"
+              (click)="overlayService.clearOverlays()"
       >
         <mat-icon>close</mat-icon>
       </button>
