--- a/src/app/widgets/header/header.component.scss
+++ b/src/app/widgets/header/header.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../node_modules/@angular/material/theming';
 
 .toolbar {
@@ -19,7 +20,7 @@ mat-toolbar-row {
 }
 
 .active {
-  color: mat-color(mat-palette($mat-orange));
+  color: mat.get-color-from-palette(mat.define-palette(mat.$orange-palette));
 }
 
 .stretch {
